# port-desc

./: Cargo.toml  LICENSE  README.md
assets/: service-names-port-numbers.csv
examples/: description.rs  port.rs  service.rs
src/: lib.rs  portdesc.rs
