[package]
name = "port-desc"
version = "0.1.1"
edition = "2021"
keywords = ["port", "information", "service", "description", "protocol"]
description = "Port service description library from internet assigned number authority"
license = "MIT"
repository = "https://github.com/chleba/port-desc"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
